# radkit-example-agent

./: Cargo.toml  README.md
src/: main.rs
src/hr_agent_skills/: create_it_accounts.rs  generate_onboarding_plan.rs  summarize_resume.rs
