[package]
name = "radkit-example-hr-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = "1.48.0"
radkit = {version="0.0.4", features = ["dev-ui", "macros"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
schemars = "1"
tryparse = "0.4.2"
radkit_cloud = "0.0.2"
